# PercepNet

./: .gitignore  CMakeLists.txt  README.md  bintoh5test.ipynb  dump_percepnet.py  requirements.txt  rnn_train.py
src/: CMakeLists.txt  arch  celt_lpc.cpp  denoise.cpp  erbband.h  kbh.pcm  main.cpp  nnet.c  nnet.cpp  nnet.h  nnet.h.gch  nnet_data.h  pitch.cpp  pitch.h  rnn.c  rnn.cpp  rnn.h  rnnoise.h  tansig_table.h  vec.h  vec_avx.h
src/tests/: moduletest.py  nnet_test.cpp
tests/: CMakeLists.txt  Untitled.ipynb  moduletest.py  nnet_data_test.h  testnnet.cpp
utils/: DNS_Challenge.yaml  bin2h5.py  filterbanks.py  parse_options.sh  path.sh  pyrapt.py  raptparams.py  run.sh  split_feature_dataset.py  vorbisstft.py  windows.py
